# Python_SMIT

./: .env  .gitignore  README.md  makefile  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: auth.py  cargo_insurance.py  sessions.py  user.py
app/: admin.py  crud.py  main.py  model.py
app/auth/: schema.py
app/cargo_insurance/: crud.py  model.py  schema.py
app/common/: model_map.py
app/sessions/: crud.py  model.py  schema.py
app/user/: crud.py  model.py  schema.py  service.py
core/: context.py  errors.py  exceptions.py  logger.py  middleware.py  sdui.py  security.py  settings.py  utils.py
core/base/: api.py  crud.py  kafka.py  model.py  schema.py  test.py
core/database/: database.py  session.py
docker/dev/: .env  Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
migrations/: env.py
migrations/versions/: 20241130200551_61a6c652900a_init.py  20241201021158_523632727f2f_init1.py  20241202124641_21071c8b4271_init.py
