[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["Andrey Erokhin <aeroalgo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.2"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
loguru = "^0.7.2"
six = "^1.16.0"
fastapi-pagination = "^0.12.32"
passlib = "^1.7.4"
asyncpg = "^0.30.0"
fastapi-sso = "^0.17.0"
python-multipart = "^0.0.18"
alembic = "^1.14.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
sqladmin = "^0.20.1"
aiokafka = "0.7.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
